--- a/src/index.css
+++ b/src/index.css
@@ -1419,11 +1419,14 @@ a {
   max-width: 500px;
   display: grid;
   grid-template-rows: 60px 1fr 5fr 50px 50px;
+  font-size: 0.8rem;
+  line-height: 18px;
 }
 
 .post-header.in-post{
-  padding: 15px;
-  margin-top: 10px;
+  padding: 30px 15px;
+  font-weight: 600;
+  border-bottom: 1px solid rgb(224, 222, 222);
 }
 
 .post-header-description{
@@ -1471,7 +1474,7 @@ a {
   display: flex;
   width: 100%;
   text-wrap: wrap;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .comment a img{
