--- a/src/index.css
+++ b/src/index.css
@@ -835,6 +835,8 @@ a {
 }
 
 .form-control{
+  width: 80%;
+  margin: 10px;
   padding: 15px;
   border: 1px solid rgb(228, 228, 228);
   background-color: rgb(252, 252, 252);
