--- a/src/index.css
+++ b/src/index.css
@@ -677,13 +677,17 @@ a {
 }
 
 .posts-border div{
-  border-top: 1px solid rgba(97, 97, 97, 0.4);
   font-size: 12px;
   margin: 0 20px;
   padding: 15px 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+}
+
+.posts-border div.active{
+  border-top: 1px solid rgba(97, 97, 97, 0.9);
 }
 
 .posts-border div p{
