--- a/src/index.css
+++ b/src/index.css
@@ -262,14 +262,15 @@ a {
   background-color: red;
   height: 1rem;
   width: 1rem;
-  font-size: 0.8rem;
-  font-weight: 100;
+  font-size: 0.7rem;
+  font-weight: 600;
   border: 1px solid white;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
   border-radius: 50%;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .dropdown-menu {
