--- a/src/index.css
+++ b/src/index.css
@@ -290,7 +290,13 @@ a {
   box-shadow: 10px 0 5px -2px rgba(97, 97, 97, 0.1);
   transition: all 0.5s ease;
   opacity: 0;
-  overflow: scroll;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.dropdown-menu::-webkit-scrollbar {
+  display: none;
 }
 
 .dropdown-menu.active {
