--- a/src/index.css
+++ b/src/index.css
@@ -107,7 +107,7 @@ section {
 
 body {
   line-height: 1;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 ol,
@@ -621,6 +621,7 @@ a {
   font-size: 0.8rem;
   font-weight: 600;
   margin-left: 10px;
+  font-family: 'Roboto', sans-serif;
 }
 
 .suggestion img{
@@ -841,7 +842,7 @@ a {
 .post-followers strong {
   margin-right: 5px;
   font-weight: 700;
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
 }
 
 /*------------------------*/
