--- a/src/index.css
+++ b/src/index.css
@@ -140,6 +140,30 @@ a {
   color: inherit;
 }
 
+.loading-screen{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 10000;
+}
+
+.loading-screen img{
+  width: 100px;
+  height: 100px;
+  margin-bottom: 20px;
+}
+
+.loading-screen h1{
+  font-size: 3rem;
+}
+
 /* NAVBAR */
 
 .nav-wrapper {
