--- a/src/index.css
+++ b/src/index.css
@@ -106,6 +106,12 @@ section {
 body {
   line-height: 1;
   font-family: 'Roboto', sans-serif;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 ol,
