--- a/src/index.css
+++ b/src/index.css
@@ -826,6 +826,67 @@ a {
 }
 
 /* -------------------- */
+/* USER FOLLOWI LIST */
+
+.followers{
+  background-color: white;
+  padding: 15px;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  margin-right: 0!important;
+  height: 400px;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.followers::-webkit-scrollbar {
+  display: none;
+}
+
+.followers h1{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid rgb(204, 208, 213);
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.follower-in-list{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 0!important;
+  margin: 10px 0;
+}
+
+.follower-in-list a{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.follower-in-list a img{
+  margin-right: 10px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.follower-in-list a div h5{
+  font-weight: 600;
+  font-size: 0.9rem!important;
+  margin-bottom: 3px;
+}
+.follower-in-list a div span{
+  font-size: 0.9rem!important;
+  color: #737373;
+}
+
+/* -------------------- */
 
 .edit-button,
 .unfollow-button,
@@ -854,6 +915,10 @@ a {
   background-color: #0064e0;
 }
 
+.unfollow-button:hover{
+  background-color: rgb(223, 223, 223);
+}
+
 .post-followers {
   display: flex;
   justify-content: space-between;
@@ -862,8 +927,7 @@ a {
   margin-bottom: 20px;
 }
 
-.post-followers div,
-.post-followers a {
+.post-followers div{
   margin-right: 40px;
 }
 
