--- a/src/index.css
+++ b/src/index.css
@@ -836,6 +836,7 @@ a {
   flex-direction: column;
   margin-right: 0!important;
   height: 400px;
+  width: 300px;
   overflow-y: scroll;
   scrollbar-width: none;
   -ms-overflow-style: none;
