--- a/src/index.css
+++ b/src/index.css
@@ -197,7 +197,7 @@ a {
 
 .notif-button {
   width: 14vw;
-  transition: width 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .notif-button.active {
@@ -254,7 +254,7 @@ a {
   margin: 4px 0;
   font-size: 1.5rem;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   border-radius: 15px;
   cursor: pointer;
@@ -1607,6 +1607,7 @@ a {
   border: 1px solid rgb(204, 208, 213);
   margin: 0;
   width: 100%;
+  background-color: #fcfcfc;
 }
 
 .update-form input:focus,
@@ -1616,7 +1617,7 @@ a {
 
 .update-submit {
   color: white;
-  border-radius: 8px;
+  border-radius: 12px;
   padding: 15px 100px;
   background-color: #0095f6;
   font-weight: 600;
