--- a/src/index.css
+++ b/src/index.css
@@ -179,7 +179,7 @@ a {
   top: 0;
   height: calc(100% - 28px);
   background-color: white;
-  padding: 8px 12px 20px;
+  padding: 8px 15px 20px;
   border-right: 1px solid rgb(240, 240, 240);
   display: flex;
   flex-direction: column;
@@ -411,7 +411,7 @@ a {
   border: 1px solid rgb(224, 222, 222);
   border-radius: 15px;
   box-shadow: 0 0 10px rgba(97, 97, 97, 0.4);
-  padding: 0.5rem;
+  padding: 0.8rem;
   width: 250px;
   z-index: 999;
 }
@@ -1341,6 +1341,11 @@ a {
   display: flex;
   flex-direction: row;
   width: 100% !important;
+  transition: all 0.001s ease;
+}
+
+.chat-box.new-message-z-index{
+  z-index: 9999;
 }
 
 .chats-box {
@@ -1349,10 +1354,11 @@ a {
   border-right: 1px solid rgb(224, 222, 222);
 }
 
+
 .chats-span {
-  font-weight: 700;
+  font-weight: 600!important;
   font-size: 0.9rem;
-  margin: 15px;
+  padding: 15px 15px 15px 25px;
 }
 
 .empty-messages {
@@ -1404,6 +1410,19 @@ a {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+}
+
+.chats-heading{
+  padding: 35px 15px 15px 25px!important;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.chats-heading button{
+  cursor: pointer;
+  background-color: inherit;
+  border: none;
 }
 
 .chat {
@@ -1541,6 +1560,80 @@ a {
   background-color: #0064e0;
 }
 
+.empty-chats{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+
+.new-message-background{
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 99999;
+  background: rgba(53, 53, 53, 0.8);
+}
+
+.new-message{
+  background-color: white;
+  padding: 15px;
+  border-radius: 15px;
+  height: 630px;
+  width: 560px;
+}
+
+.new-message-span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 15px;
+  border-bottom: 1px solid rgb(204, 208, 213);
+  font-weight: 600;
+}
+
+.new-message-to{
+  border-bottom: 1px solid rgb(204, 208, 213);
+}
+
+.new-message-to label{
+  font-weight: 700;
+}
+
+.new-message-to input{
+  background-color: inherit;
+  border: none;
+  width: 80%;
+  margin: 0;
+}
+
+.search-result.in-chat div{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.result-box.in-chat{
+  width: 100%;
+  padding: 0;
+}
+
+.result-names.in-chat{
+  margin: 0!important;
+}
+
+.no-results{
+  margin: 25px;
+  color: #737373;
+}
+
 /* Update */
 
 .edit-profile {
@@ -1675,7 +1768,7 @@ a {
   justify-content: center;
   align-items: center;
   background-color: rgba(97, 97, 97, 0.5);
-  z-index: 1005;
+  z-index: 2000;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -1741,7 +1834,7 @@ a {
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 2000;
+  z-index: 1900;
 }
 
 .post-header-description {
