--- a/src/index.css
+++ b/src/index.css
@@ -817,6 +817,20 @@ a {
   width: 100%;
 }
 
+.post-link-container{
+  width: 75vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 5vw 0 20vw;
+}
+
+.post-link {
+  border: 1px solid rgb(223, 223, 223);
+}
+
+
 .posts-border div {
   font-size: 12px;
   margin: 0 20px;
@@ -1829,7 +1843,7 @@ a {
 }
 
 .card-body {
-  width: 400px;
+  min-width: 40%;
   display: grid;
   grid-template-rows: 60px 1fr 5fr 50px 50px;
   font-size: 0.8rem;
