changed cursor in profile photo update

--- a/src/index.css
+++ b/src/index.css
@@ -1848,6 +1848,7 @@ a {
 .change-photo-container div:nth-child(1){
   font-size: 1.3rem;
   font-weight: 400;
+  cursor: auto;
 }
 
 .change-photo-container label {
