--- a/src/index.css
+++ b/src/index.css
@@ -583,6 +583,7 @@ a {
 
 .interactions div svg {
   margin-right: 15px;
+  border: none;
 }
 
 .save-div svg {
@@ -836,7 +837,6 @@ a {
   border: 1px solid rgb(223, 223, 223);
 }
 
-
 .posts-border div {
   font-size: 12px;
   margin: 0 20px;
@@ -848,11 +848,36 @@ a {
 }
 
 .posts-border div.active {
-  border-top: 1px solid rgba(97, 97, 97, 0.9);
+  /* border-top: 1px solid rgba(97, 97, 97, 0.9); */
+  font-weight: 700;
 }
 
 .posts-border div p {
   margin-left: 5px;
+}
+
+.posts-border{
+  position: relative;
+}
+
+.options-line{
+  position: absolute;
+  height: 1px;
+  width: 70px;
+  background-color: black;
+  top: 0;
+  margin: 0;
+  padding: 0!important;
+  transition: all 0.2s ease-in-out;
+  transform: translateX(3px);
+}
+
+.options-line.posts{
+  transform: translateX(-95px);
+}
+
+.options-line.saved{
+  transform: translateX(100px);
 }
 
 /* POSTS ON PROFILE */
@@ -962,6 +987,10 @@ a {
   border: none;
   cursor: pointer;
   margin: 0 5px;
+}
+
+.edit-button:hover{
+  background-color: rgb(223, 223, 223);
 }
 
 .follow-button {
