--- a/src/index.css
+++ b/src/index.css
@@ -1583,6 +1583,22 @@ a {
   overflow-y: scroll;
   scrollbar-width: none;
   -ms-overflow-style: none;
+  position: relative;
+}
+
+.seen-status{
+  position: absolute;
+  bottom: 0;
+  color: #737373;
+  font-size: 0.8rem;
+  background-color: red;
+  background-color: black;
+  z-index: 10000;
+}
+
+.seen-status div{
+  font-size: 50px;
+  color: red;
 }
 
 .messages-container::-webkit-scrollbar {
@@ -1604,6 +1620,8 @@ a {
 .send-message {
   position: relative;
 }
+
+
 
 .send-button {
   position: absolute;
